# internal/handler/books.go
@@ -18,8 +18,9 @@ import (
 // @Param terms query string true "terms (Author, Title, Publisher)"
 // @Success 200 {object} entity.BooksDTO
 // @Failure 400 {object} entity.FailureResponse
+// @Failure 401 {object} entity.FailureResponse
+// @Failure 403 {object} entity.FailureResponse
 // @Failure 404 {object} entity.FailureResponse
-// @Failure 500 {object} entity.FailureResponse
 // @Router /v1/books [GET]
 // @Security APIToken
 func (service *API) LookForBooks(c *gin.Context) {
@@ -45,6 +46,8 @@ func (service *API) LookForBooks(c *gin.Context) {
 // @Param data body []entity.Book true "struct to create a new wishlist"
 // @Success 201 {object} entity.SuccessResponse
 // @Failure 400 {object} entity.FailureResponse
+// @Failure 401 {object} entity.FailureResponse
+// @Failure 403 {object} entity.FailureResponse
 // @Failure 409 {object} entity.FailureResponse
 // @Failure 500 {object} entity.FailureResponse
 // @Router /v1/wishlist/{userid} [POST]
@@ -77,4 +80,34 @@ func (service *API) CreateWishList(c *gin.Context) {
 	}
 
 	c.JSON(http.StatusOK, common.Success())
+}
+
+// GetWishList get wishlist if exists
+// @Summary returns wishlist of books
+// @Description List of books from google saved in datastore
+// @Tags Books
+// @Produce json
+// @Param userid path string true "userId"
+// @Success 200 {object} []entity.ItemWishList
+// @Failure 400 {object} entity.FailureResponse
+// @Failure 401 {object} entity.FailureResponse
+// @Failure 403 {object} entity.FailureResponse
+// @Failure 500 {object} entity.FailureResponse
+// @Router /v1/wishlist/{userid} [GET]
+// @Security APIToken
+func (service *API) GetWishList(c *gin.Context) {
+	userid := c.Param("userid")
+	id, err := strconv.Atoi(userid)
+	if err != nil {
+		common.Failure("The UserID should be a number", err.Error(), http.StatusBadRequest, c)
+		return
+	}
+
+	list, msg, err := service.App.Repo.GetWishList(uint(id))
+	if err != nil {
+		common.Failure(msg, err.Error(), http.StatusInternalServerError, c)
+		return
+	}
+
+	c.JSON(http.StatusOK, list)
 }
